# SLIC-Extension-Research

./: .gitignore  README.md
SDP_LTRIDP/: CMakeLists.txt
SDP_LTRIDP/src/: slic.cpp  slic.hpp  superduperpixel.cpp  superduperpixel.hpp
SDP_LTRIDP/tests/: CMakeLists.txt  README.md  test_complete_pipeline_v2.cpp
SuperDuperPixels/src/: demo.cpp  sdp_slic.cpp  sdp_slic.hpp  superduperpixel.cpp  superduperpixel.hpp
SuperpixelImageSearch/: CMakeLists.txt
SuperpixelImageSearch/scripts/: dowload_coco.py
SuperpixelImageSearch/src/: main.cpp  pipeline_demo.cpp
evaluation/: CMakeLists.txt  evaluator.cpp  evaluator.hpp
ltridp/: CMakeLists.txt
ltridp/feature/: feature_extraction.cpp
ltridp/include/: slic.hpp
ltridp/segmentation/: CMakeLists.txt  slic.cpp
ltridp/tests/: CMakeLists.txt  test_complete_pipeline.cpp  test_slic.cpp  test_with_mri_samples.cpp
output/csv/: master_results.csv
